<resources>
    <string name="app_name">All Views</string>
    <string name="edittext">EditText</string>
    <string name="seekbar">SeekBar</string>
    <string name="widgets_portal">Widgets Portal</string>
    <string name="textview">TextView</string>
    <string name="datepicker">DatePicker</string>
    <string name="timepicker">TimePicker</string>
    <string name="toolbar">ToolBar</string>
    <string name="viewpager">ViewPager</string>
    <string name="alertdialog">AlertDialog</string>
    <string name="tablayout">TabLayout</string>
    <string name="imageview">ImageView</string>
    <string name="button">Button</string>
    <string name="recyclerview">RecyclerView</string>
    <string name="listview">ListView</string>
    <string name="spinner">Spinner</string>
    <string name="progressbar">ProgressBar</string>
    <string name="checkbox">CheckBox</string>
    <string name="radiobutton">RadioButton</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>