<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#344042"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="fill_parent"
        android:layout_height="75dp"
        android:background="#212121"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/widgets_portal"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:autoSizeTextType="none"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="@+id/toolbar"
        app:layout_constraintTop_toTopOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.5" />


    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="90dp">

            <Button
                android:id="@+id/button"
                style="@style/widgetButton"
                android:onClick="goToTextViewActivity"
                android:text="@string/textview"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/button1"
                style="@style/widgetButton"
                android:layout_marginTop="40dp"
                android:onClick="goToEditTextActivity"
                android:text="@string/edittext"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button" />

            <Button
                android:id="@+id/button2"
                style="@style/widgetButton"
                android:layout_marginTop="40dp"
                android:onClick="goToButtonActivity"
                android:text="@string/button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button1" />

            <Button
                android:id="@+id/button3"
                style="@style/widgetButton"
                android:layout_marginTop="40dp"
                android:onClick="goToImageViewActivity"
                android:text="@string/imageview"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button2" />

            <Button
                android:id="@+id/button5"
                style="@style/widgetButton"
                android:layout_marginTop="40dp"
                android:onClick="goToListViewActivity"
                android:text="@string/listview"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button3" />

            <Button
                android:id="@+id/button6"
                style="@style/widgetButton"
                android:layout_marginTop="40dp"
                android:onClick="goToSpinnerActivity"
                android:text="@string/spinner"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button5" />

            <Button
                android:id="@+id/button7"
                style="@style/widgetButton"
                android:layout_marginTop="40dp"
                android:onClick="goToProgressBarActivity"
                android:text="@string/progressbar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button6" />

            <Button
                android:id="@+id/button8"
                style="@style/widgetButton"
                android:layout_marginTop="40dp"
                android:onClick="goToCheckBoxActivity"
                android:text="@string/checkbox"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button7" />

            <Button
                android:id="@+id/button9"
                style="@style/widgetButton"
                android:layout_marginTop="40dp"
                android:onClick="goToRadioButtonActivity"
                android:text="@string/radiobutton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button8" />

            <Button
                android:id="@+id/button10"
                style="@style/widgetButton"
                android:layout_marginTop="40dp"
                android:onClick="goToSwitchActivity"
                android:text="Switch"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button9" />

            <Button
                android:id="@+id/button11"
                style="@style/widgetButton"
                android:layout_marginTop="40dp"
                android:onClick="goToSeekBarActivity"
                android:text="@string/seekbar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button10" />

            <Button
                android:id="@+id/button12"
                style="@style/widgetButton"
                android:layout_marginTop="40dp"
                android:onClick="goToDatePickerActivity"
                android:text="@string/datepicker"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button11" />

            <Button
                android:id="@+id/button13"
                style="@style/widgetButton"
                android:layout_marginTop="40dp"
                android:onClick="goToTimePickerActivity"
                android:text="@string/timepicker"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button12" />

            <Button
                android:id="@+id/button14"
                style="@style/widgetButton"
                android:layout_marginTop="40dp"
                android:onClick="goToAlertDialogActivity"
                android:text="@string/alertdialog"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button13" />

            <Button
                android:id="@+id/button15"
                style="@style/widgetButton"
                android:layout_marginTop="40dp"
                android:onClick="goToToolBarActivity"
                android:text="@string/toolbar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button14" />

            <Button
                android:id="@+id/button16"
                style="@style/widgetButton"
                android:layout_marginTop="40dp"
                android:onClick="goToTabLayoutActivity"
                android:text="@string/tablayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button15" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>